--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@
         }
       }
 
+
 .timeline {
   list-style: none;
   padding: 20px 0 20px;
@@ -160,11 +161,52 @@
   margin-top: 5px;
 }
 /* timeline */
- 
-#customer-center{
-	font-size:3rem;
+
+/* Header */
+#dropdown01{
+	padding-left:3rem;
 }
 
+/* Representative greeting */
+ .product-device {
+  position: absolute;
+  right: 10%;
+  bottom: -30%;
+  width: 300px;
+  height: 540px;
+  background-color: #333;
+  border-radius: 21px;
+  -webkit-transform: rotate(30deg);
+  transform: rotate(30deg);
+}
+
+.product-device::before {
+  position: absolute;
+  top: 10%;
+  right: 10px;
+  bottom: 10%;
+  left: 10px;
+  content: "";
+  background-color: rgba(255, 255, 255, .1);
+  border-radius: 5px;
+}
+
+.product-device-2 {
+  top: -25%;
+  right: auto;
+  bottom: 0;
+  left: 5%;
+  background-color: #e5e5e5;
+}
+
+/* process */
+#process{
+	padding-bottom:5rem;
+}
+#process_title{
+	text-align:center;
+	font-size:10% !important; 
+}
 
 #sitemap_title{
 	font-size:2rem;
@@ -177,7 +219,11 @@
 	 display: flex;
   justify-content: center;
 }
-#process{
-	padding-bottom:5rem;
+
+
+/* Footer*/
+#customer-center{
+	font-size:3rem;
 }
+
 
