--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,16 @@
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200");
+
 body{
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif ;
+	background-color:rgb(208,208,208);
+
 } 
+
+#product_description > div{
+	background-image: url(../images/bg.jpg);
+	background-size:cover;
+}
+
 
 .bd-placeholder-img {
         font-size: 1.125rem;
@@ -12,159 +22,9 @@ body{
 
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+          font-size: 5rem;
         }
       }
-
-/* timeline */
-.timeline {
-  list-style: none;
-  padding: 20px 0 20px;
-  position: relative;
-}
-
-.timeline:before {
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eeeeee;
-  left: 50%;
-  margin-left: -1.5px;
-}
-
-.timeline > li {
-  margin-bottom: 20px;
-  position: relative;
-}
-
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
-
-.timeline > li:after {
-  clear: both;
-}
-
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
-
-.timeline > li:after {
-  clear: both;
-}
-
-.timeline > li > .timeline-panel {
-  width: 46%;
-  float: left;
-  border: 1px solid #d4d4d4;
-  border-radius: 2px;
-  padding: 20px;
-  position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-}
-
-.timeline > li > .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -15px;
-  display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
-  content: " ";
-}
-
-.timeline > li > .timeline-panel:after {
-  position: absolute;
-  top: 27px;
-  right: -14px;
-  display: inline-block;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0 solid #fff;
-  border-bottom: 14px solid transparent;
-  content: " ";
-}
-
-.timeline > li > .timeline-badge {
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  font-size: 1.4em;
-  text-align: center;
-  position: absolute;
-  top: 16px;
-  left: 50%;
-  margin-left: -25px;
-  background-color: #999999;
-  z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}
-
-.timeline-badge.primary {
-  background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-  background-color: #3f903f !important;
-}
-
-.timeline-badge.warning {
-  background-color: #f0ad4e !important;
-}
-
-.timeline-badge.danger {
-  background-color: #d9534f !important;
-}
-
-.timeline-badge.info {
-  background-color: #5bc0de !important;
-}
-
-.timeline-title {
-  margin-top: 0;
-  color: inherit;
-}
-
-.timeline-body > p,
-.timeline-body > ul {
-  margin-bottom: 0;
-}
-
-.timeline-body > p + p {
-  margin-top: 5px;
-}
-
 
 
 /* Header */
@@ -173,40 +33,32 @@ body{
 }
 
 /* Representative greeting */
-
-
- 
 #greetings{
-	 display: flex;
+	display: flex;
   justify-content: center;
+background-color:rgb(220,220,220);
 }
 
-/* process */
-#process{
-	padding-bottom:5rem;
+/* product introduction */
+#product_description > div > div > div > div:nth-child(n+0):nth-child(-n+7)
+ > div{
+	background-color: rgba(255,255,255,0.09);
 }
-#timeline\ text-center{
-	
-	
-	padding-bottom:3rem;
+#product_description > div > div > div > div:nth-child(n+0):nth-child(-n+7) > div > div > p{
+	color:rgb(48,48,48);
+	}
+#product_description > div > div > div > div:nth-child(7){
+	margin:0 auto;
 }
-#process_title{
+
+/* consulting */
+
+#icon{
 	text-align:center;
+	font-size:2rem;
+	font-family: "Source Sans Pro", Helvetica, sans-serif;
+	font-weight: 300;
 }
-
-
-/* councelling */
-
-/* #telephone_num{
-	position:relative;
-	left:16rem;
-	top:-3rem;
-}
- */
-
-
-
-
 
 /* Footer*/
 #customer-center{
@@ -220,10 +72,12 @@ body{
 	padding-left:8rem;
 }
 	
+#footer{
+	background-color:rgba(0, 0, 0, 0.2) !important;
+}
 
 
 
 
 
-
-
+	
