--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,6 @@
 
 body{
 	font-family: 'Source Sans Pro', sans-serif ;
-	background-color:rgb(208,208,208);
-
 } 
 
 #product_description > div{
@@ -37,6 +35,11 @@ body{
 	display: flex;
   justify-content: center;
 background-color:rgb(220,220,220);
+	border-radius:8rem;
+}
+#greetings > div.col-md-5.p-lg-5.mx-auto.my-5.text-dark{
+	margin:0;
+	padding:0;
 }
 
 /* product introduction */
@@ -81,8 +84,20 @@ background-color:rgb(220,220,220);
 
 
 
+body > main > div:nth-child(4) > div:nth-child(1) > div.col-md-5 > img{
+	width:30rem;
+	height:20rem;	
+}
 
+body > main > div:nth-child(4) > div:nth-child(3) > div.col-md-5.order-md-1 > img {
+	width:30rem;
+	height:20rem;
+}
 
+body > main > div:nth-child(4) > div:nth-child(5) > div.col-md-5 > img{
+		width:30rem;
+	height:20rem;
+}
 
 
 	
