--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -8,7 +8,7 @@
 /*  border:5px solid blue;*/
 }
 body{
-  background-image: url(../../images/bg.jpg);
+  background-image: url(../../example/간판+이미지/bg.jpg);
   background-size:cover;
   font-family: 'Source Sans Pro', sans-serif;
 }
