--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,18 @@
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200");
 
+body > header > nav > div > div.navbar_logo > img{
+	width: 4.3em;
+  height: 4.3rem;
+  object-fit: fill;
+	margin-right:2rem;
+}
+
 body{
 	font-family: 'Source Sans Pro', sans-serif ;
 } 
 
 #product_description > div{
-	background-image: url(../images/bg.jpg);
+	background-image: url(../example/간판+이미지/bg.jpg);
 	background-size:cover;
 }
 
