--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,20 +2,13 @@ body{
 	  font-family: 'Source Sans Pro', sans-serif;
 }
 body > header > nav > div > div.navbar_logo > img{
-	width: 9.5rem;
-  height: 3.5rem;
-  object-fit:cover ;
+	width: 9rem;
+  	height: 3.5rem;
+  	object-fit:cover ;
 }
 body > header > nav{
 	background-color:#263343;
 }
-
-/* #product_description > div{
-	background-image: url( "../간판+이미지/bg.jpg" );
-}
- */
-
-
 
 .bd-placeholder-img {
         font-size: 1.125rem;
@@ -73,8 +66,11 @@ background-color:rgb(220,220,220);
   margin-right: auto;
   width: 70%;
   margin-top:8rem;
-  padding-bottom:2rem;
+  padding-bottom:4rem;
 		  }
+#primary-slider div ul li{
+	border-radius:2rem;
+}
 
 /* consulting */
 #contact > div > div{
@@ -127,6 +123,7 @@ body > main > div:nth-child(4) > div:nth-child(5) > div.col-md-5 > img{
 	height:19rem !important;
 }
 #product_description > div > div > div > div:nth-child(n+0){
-	margin-bottom:2rem; ;
-
+	margin-bottom:2rem; 
 }
+
+
